--- a/Skills-Overflow-Backend/pom.xml
+++ b/Skills-Overflow-Backend/pom.xml
@@ -79,10 +79,18 @@
 			<artifactId>hibernate-validator</artifactId>
 			<version>6.1.4.Final</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>5.2.5.RELEASE</version>
+        </dependency>
 
 
-
-	</dependencies>
+    </dependencies>
 
 	<build>
 		<plugins>
